vendor/structopt-0.3.21/tests/ui/parse_function_is_not_path.stderr
error: `parse` argument must be a function path
  --> $DIR/parse_function_is_not_path.rs:14:34
   |
14 |     #[structopt(parse(from_str = "2"))]
   |                                  ^^^
